--- a/share/doc/docs/doc.sty
+++ b/share/doc/docs/doc.sty
@@ -57,6 +57,10 @@
 %    numbers=left, numberstyle=\footnotesize, stepnumber=1, numbersep=3ex
   }
 
+  \usepackage{fancyvrb}
+  \fvset{numbers=left,xleftmargin=5ex}
+  \DefineShortVerb{\|}
+
   \makeatletter
   \newenvironment{code}{
 
