--- a/share/doc/guide.tex
+++ b/share/doc/guide.tex
@@ -427,7 +427,7 @@ insight into git's concepts. For deeper understanding %
 %
 \verb+man gitcore-tutorial+ is your friend.
 
-Usually, \verb+git foo help+ is synonim for \verb+man git foo+.
+Usually, \verb+git foo help+ is synonym for \verb+man git foo+.
 
 \begin{code}
 \begin{verbatim}
