--- a/share/doc/guide.tex
+++ b/share/doc/guide.tex
@@ -75,7 +75,7 @@ These are symbolic-linked in the |git/share/extern| directory. Call the
 \item TODO: In the future all external libs should be handled like
   |ODE_0.11|: minimal |GET/BUILD| script and .gitignore
 
-\item Try 'make' in the |it/share| directory. If problems occur, try to
+\item Try 'make' in the |git/share| directory. If problems occur, try to
 comment the following lines in the |src/MT/Makefile|:
 \begin{code}
 \begin{verbatim}
