--- a/INSTALL
+++ b/INSTALL
@@ -1,55 +1,83 @@
 #! /bin/sh
-
+#
 # INSTALLING YOUR MLR-SYSTEM
 # (c) Machine Learning and Robotics Lab, FU Berlin, Germany, 2011
 # http://www.inf.fu-berlin.de/en/groups/mlr
+#
+#
+# Parameters:
+#
+# - Directory where the external libraries get installed
+#   DIR_EXTERNAL_LIBS=<directory>
+#   Default: ~/lib/
+#
+# - Tar-ball of the external libraries
+#   FILE_LIBS_TARBALL=<file>
+#   Default ./mlrLibs.tgz
+#   You can get this tarball from
+#   https://maserati.mi.fu-berlin.de/redmine/attachments/894/mlrLibs.tgz
 
 
-DIR_EXTERNAL_LIBS=~/lib/
+[ -z "${DIR_EXTERNAL_LIBS}" ] && DIR_EXTERNAL_LIBS=~/lib/
+[ -z "${FILE_LIBS_TARBALL}" ] && FILE_LIBS_TARBALL=mlrLibs.tgz
 
+FILE_SCRIPT=`readlink -f $0`
+DIR_GIT=`dirname $FILE_SCRIPT`
+ARCH=`uname -m`
 
-# Absolute path to this script, e.g. /home/user/bin/foo.sh
-SCRIPT=`readlink -f $0`
-# Absolute path this script is in, thus /home/user/bin
-DIR_GIT=`dirname $SCRIPT`
 
 
 # ----------------------------
 # (1) External Libraries
 
 echo "Setting up external libraries in: " $DIR_EXTERNAL_LIBS
+echo "Using tar-ball: " $FILE_LIBS_TARBALL
 
 if [ ! -d "${DIR_EXTERNAL_LIBS}" ] ; then
   echo "Creating lib directory: " $DIR_EXTERNAL_LIBS
   mkdir $DIR_EXTERNAL_LIBS
 fi
 
+cp $FILE_LIBS_TARBALL $DIR_EXTERNAL_LIBS
 cd $DIR_EXTERNAL_LIBS
 
-# (1.1) Download 
-# TODO Noch geeigneten Ort fuer Tar-ball finden
-# wget \
-# https://maserati.mi.fu-berlin.de/redmine/attachments/894/mlrLibs.tgz
-# Veraendert irgendwie die Dateien :-(
-# TODO DECOMMENT NEXT LINE
-# scp tobias@achtauge.imp.fu-berlin.de:mlrLibs.tgz .
-
-# (1.2) Unpack 
-# TODO DECOMMENT NEXT LINE
+echo "Unpacking tar-ball..."
 tar xfz mlrLibs.tgz
 
+echo "Setting library links to libraries appropriate for the architecture..."
+echo "Architecture=" ARCH
 
-# (1.3) Install everything
-# TODO
+# SWIFT
+if [ "${ARCH}" = "x86_64" ] ; then
+  cp SWIFT++_1.2/lib/libswiftpp12-gcc432r-64.a SWIFT++_1.2/lib/libSWIFT++.a
+  echo "Using SWIFT++_1.2/lib/libswiftpp12-gcc432r-64.a"
+else
+  cp SWIFT++_1.2/lib/libswiftpp12-debr.a SWIFT++_1.2/lib/libSWIFT++.a
+  echo "Using SWIFT++_1.2/lib/libswiftpp12-debr.a"
+fi
+# NTCAN
+cd $DIR_EXTERNAL_LIBS/ntcan/lib/
+if [ "${ARCH}" = "x86_64" ] ; then
+  ln -s -f libntcan_x86_64.a libntcan.a
+  echo "Using libntcan_x86_64.a"
+else
+  ln -s -f libntcan_i686.a libntcan.a
+  echo "Using libntcan_i686.a"
+fi
 
-# (1.4) Link to libraries
+
+echo "Making libcolorseg (Felzenswalb-adaptation of Nils Plath)..."
+cd $DIR_GIT/share/extern/libcolorseg/src/
+make
+
+
+echo "Building symbolic links in " $DIR_GIT "share/extern/ to libraries
+directory " $DIR_EXTERNAL_LIBS "..."
 
 cd $DIR_GIT
 cd share/extern
-echo "Linking 'extern/' to libraries directory " $DIR_EXTERNAL_LIBS "..."
 ./LINK $DIR_EXTERNAL_LIBS
 cd ../..
-echo "Linking successfully finished."
 
 
 
@@ -58,9 +86,7 @@ echo "Linking successfully finished."
 # ----------------------------
 # (2) Create make-config
 
-# Appropriate flags
-
-# Erstellung einer make-config
+echo "Creating make-config (specify individual profiles here)..."
 
 cd share/
 mv make-config make-config.BAK
@@ -70,6 +96,8 @@ endif
 " > make-config
 cd ..
 
+# TODO Profile: without hardware (no Schunk)
+
 
 
 
@@ -78,45 +106,51 @@ cd ..
 # ----------------------------
 # (3) Install our libs
 
+echo "Installing MLR-libs (libmt, librelational etc.)..."
 
-# (3.1) libmt
+make makeAll
 
-cd share/src/MT/
-make
-cd ../../../
-echo "src/MT/ has been made successully."
-
-
-# (3.2) libnj
-
-cd share/src/NJ/
-make
-cd ../../../
-echo "\nsrc/MT/ has been made successully.\n"
-
-
-# (3.3) libsd
-
-cd share/src/SD/
-make
-cd ../../../
-echo "\nsrc/SD/ has been made successully.\n"
-
-
-# (3.3) libsd
-
-cd share/src/DZ/
-make
-cd ../../../
-echo "\nsrc/DZ/ has been made successully.\n"
-
-
-# (3.4) librelational
-
-cd share/src/relational/
-make
-cd ../../../
-echo "\nsrc/relational/ has been made successully.\n"
+# 
+# # TODO make install libraries
+# 
+# # (3.1) libmt
+# 
+# cd share/src/MT/
+# make
+# cd ../../../
+# echo "src/MT/ has been made successully."
+# 
+# 
+# # (3.2) libnj
+# 
+# cd share/src/NJ/
+# make
+# cd ../../../
+# echo "\nsrc/MT/ has been made successully.\n"
+# 
+# 
+# # (3.3) libsd
+# 
+# cd share/src/SD/
+# make
+# cd ../../../
+# echo "\nsrc/SD/ has been made successully.\n"
+# 
+# 
+# # (3.3) libsd
+# 
+# cd share/src/DZ/
+# make
+# cd ../../../
+# echo "\nsrc/DZ/ has been made successully.\n"
+# 
+# 
+# # (3.4) librelational
+# 
+# cd share/src/relational/
+# make
+# cd ../../../
+# echo "\nsrc/relational/ has been made successully.\n"
 
 
 
