--- a/INSTALL
+++ b/INSTALL
@@ -1,25 +1,29 @@
 #! /bin/sh
 #
-# INSTALLING YOUR MLR-SYSTEM
-# (c) Machine Learning and Robotics Lab, FU Berlin, Germany, 2011
-# http://www.inf.fu-berlin.de/en/groups/mlr
+#  INSTALLING YOUR MLR-SYSTEM
+#  (c) Machine Learning and Robotics Lab, FU Berlin, Germany, 2011
+#  http://www.inf.fu-berlin.de/en/groups/mlr
+#  Tobias Lang
 #
 #
-# Parameters:
+#  Parameters:
 #
-# - Directory where the external libraries get installed
-#   DIR_EXTERNAL_LIBS=<directory>
-#   Default: ~/lib/
+#  - Directory where the external libraries get installed
+#    DIR_EXTERNAL_LIBS=<directory>
+#    Default: ~/lib/
 #
-# - Tar-ball of the external libraries
-#   FILE_LIBS_TARBALL=<file>
-#   Default ./mlrLibs.tgz
-#   You can get this tarball from
-#   https://maserati.mi.fu-berlin.de/redmine/attachments/894/mlrLibs.tgz
+#  - Tar-ball of the external libraries
+#    FILE_TARBALL=<file>
+#    Default ./mlrLibs.tgz
+#    You can get this tarball from
+#    https://maserati.mi.fu-berlin.de/redmine/attachments/922/mlrLibs.tar.gz
+#
+#  Example Call:
+#    FILE_TARBALL=mlrLibs.tar.gz  ./INSTALL
 
 
 [ -z "${DIR_EXTERNAL_LIBS}" ] && DIR_EXTERNAL_LIBS=~/lib/
-[ -z "${FILE_LIBS_TARBALL}" ] && FILE_LIBS_TARBALL=mlrLibs.tgz
+[ -z "${FILE_TARBALL}" ] && FILE_TARBALL=mlrLibs.tgz
 
 FILE_SCRIPT=`readlink -f $0`
 DIR_GIT=`dirname $FILE_SCRIPT`
@@ -27,25 +31,36 @@ ARCH=`uname -m`
 
 
 
+
 # ----------------------------
 # (1) External Libraries
 
+echo "+++ EXTERNAL LIBS +++\n\n"
 echo "Setting up external libraries in: " $DIR_EXTERNAL_LIBS
-echo "Using tar-ball: " $FILE_LIBS_TARBALL
+echo "Using tar-ball: " $FILE_TARBALL
 
 if [ ! -d "${DIR_EXTERNAL_LIBS}" ] ; then
   echo "Creating lib directory: " $DIR_EXTERNAL_LIBS
   mkdir $DIR_EXTERNAL_LIBS
 fi
 
-cp $FILE_LIBS_TARBALL $DIR_EXTERNAL_LIBS
-cd $DIR_EXTERNAL_LIBS
+if [ ! -f "${FILE_TARBALL}" ] ; then
+  echo "ERROR: Tar-ball '"$FILE_TARBALL"' does not exist."
+  exit
+fi
 
+echo 'cp' $FILE_TARBALL $DIR_EXTERNAL_LIBS
+cp $FILE_TARBALL $DIR_EXTERNAL_LIBS
+
+echo "Changing directory..."
+cd $DIR_EXTERNAL_LIBS
+pwd
 echo "Unpacking tar-ball..."
-tar xfz mlrLibs.tgz
+echo 'tar xfz' $FILE_TARBALL
+tar xfz $FILE_TARBALL
 
 echo "Setting library links to libraries appropriate for the architecture..."
-echo "Architecture=" ARCH
+echo "Architecture=" $ARCH
 
 # SWIFT
 if [ "${ARCH}" = "x86_64" ] ; then
@@ -86,6 +101,8 @@ cd ../..
 # ----------------------------
 # (2) Create make-config
 
+echo "\n\n\n+++ make-config +++\n\n"
+
 echo "Creating make-config (specify individual profiles here)..."
 
 cd share/
@@ -106,56 +123,27 @@ cd ..
 # ----------------------------
 # (3) Install our libs
 
+echo "\n\n\n+++ MLR-LIBS +++\n\n"
+
+cd $DIR_GIT/share/
+pwd
 echo "Installing MLR-libs (libmt, librelational etc.)..."
 
 make makeAll
-
-# 
-# # TODO make install libraries
-# 
-# # (3.1) libmt
-# 
-# cd share/src/MT/
-# make
-# cd ../../../
-# echo "src/MT/ has been made successully."
-# 
-# 
-# # (3.2) libnj
-# 
-# cd share/src/NJ/
-# make
-# cd ../../../
-# echo "\nsrc/MT/ has been made successully.\n"
-# 
-# 
-# # (3.3) libsd
-# 
-# cd share/src/SD/
-# make
-# cd ../../../
-# echo "\nsrc/SD/ has been made successully.\n"
-# 
-# 
-# # (3.3) libsd
-# 
-# cd share/src/DZ/
-# make
-# cd ../../../
-# echo "\nsrc/DZ/ has been made successully.\n"
-# 
-# 
-# # (3.4) librelational
-# 
-# cd share/src/relational/
-# make
-# cd ../../../
-# echo "\nsrc/relational/ has been made successully.\n"
 
 
 
 # ----------------------------
 # (4) Tests
 
-echo "To test the code, go to share/test/."
+echo "\n\n\n+++ TESTS +++\n\n"
+
+make tests
+
+echo "\n\n\n\nTo test the code, go to share/test/."
+
+
+
+echo "\n\nInstallation successful!"
+
 
