--- a/share/doc/guide.tex
+++ b/share/doc/guide.tex
@@ -431,6 +431,8 @@ Usually, \verb+git foo help+ is synonym for \verb+man git foo+.
 
 \begin{code}
 \begin{verbatim}
+git remote add maserati https://mtoussai@maserati.mi.fu-berlin.de/git/mlr
+
 git clone ssh://<achtauge-user>@achtauge.imp.fu-berlin.de/mnt/data/git/share mlr
 git config --global diff.external git-diff.sh
 git config --global push.default tracking
