--- a/share/doc/guide.tex
+++ b/share/doc/guide.tex
@@ -613,7 +613,7 @@ git branch -a
 git remote show maserati
 git checkout <branch>
 git branch <new-branch>
-git branch --track <new-branch> <remote-branch>
+git branch --track <new-branch> <existing-remote-branch>
 // set branch to pull from some remote branch
 git branch --set-upstream <existing-branch> <remote-branch-to-be-tracked>
 // Example: git branch --set-upstream branch123 origin/branch123
@@ -748,6 +748,8 @@ git config --get http.proxy
 \end{itemize}
 
 \subsubsection{Proposal for simplifying mlr git macros!}
+
+DONE - is included in share/bin!
 
 \begin{description}
 \item[GIT-newBranch \$1]
