joystick works in new framework

--- a/share/src/motion/TODO
+++ b/share/src/motion/TODO
@@ -25,3 +25,5 @@
 
 ** The MotionPrimitive is now also the KeyframeOptimizer. But this became natural because the keyframe task depends totally on the action...
 
+
+** more variables with one name - self access fails...
