set up slices/libPRADA/

--- a/slices/libPRADA/README
+++ b/slices/libPRADA/README
@@ -34,7 +34,7 @@ alternatively the following:
 
 *** GPL licence statement:
 
-    Copyright 2011 Tobias Lang
+    Copyright 2008-2012 Tobias Lang
     email: tobias.lang@fu-berlin.de
 
     This file is part of libPRADA.
